# Nand2Tetris

./: .gitignore  README.md  setpath.env
jack-demos/: Jack_Language_Extensions_Reversal_Guide.md  NOTES
jack-demos/Bichromia/: Display.jack  Main.jack  Map.jack  SOURCE
jack-demos/Calculator/: Array.jack  JackLang_variance.md  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
jack-demos/DijkstraShortestPath/: Main.jack  SOURCE
jack-demos/DrunkenSniper/: Main.jack
jack-demos/GASboing/: SOURCE
jack-demos/GASteroids/: Asteroid.jack  DrawPoly.jack  SOURCE  Ship.jack  Shots.jack  StarBurst.jack
jack-demos/GameOfLife/: Cell.jack  CharPainter.jack  Generator.jack  Main.jack  Universe.jack
jack-demos/Hackenstein3D/: Main.jack  Player.jack  SOURCE
jack-demos/Paint/: Cell.jack  Dialogue.jack  InputBox.jack  Main.jack  Paint.jack  README.md  SOURCE
jack-demos/Raytracer/: CalcPixel.jack  CameraMatrix.jack  Dither.jack  Float316.jack  ImageRenderer.jack  Main.jack  Parameters.jack  RayMarcher.jack  SOURCE  Scene.jack  Surface.jack  TwoToThePower.jack  UtilsFloat.jack  UtilsVec.jack  Vec3.jack
jack-demos/SieveOfEratosthenes/: Main.jack  SOURCE
jack-demos/StarHack/: Array.jack  Math.jack  Memory.jack  SOURCE  String.jack  Sys.jack
jack-demos/Tetris/: World.jack
jack-demos/TicTacToe/: Main.jack  O.jack
jack-demos/VoltorbFlip/: Card.jack  DrawModule.jack  Game.jack  Main.jack  SOURCE
my_computer/01/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Makefile  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
my_computer/02/: ALU.hdl  Add16.hdl  FullAdder.hdl  Makefile  ZeroCheck.cmp  ZeroCheck.hdl  ZeroCheck.tst
my_computer/03/a/: Bit.hdl  Makefile  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
my_computer/03/b/: Makefile  RAM16K.hdl  RAM4K.hdl  RAM512.hdl
my_computer/04/fill/: Fill-F.asm  Makefile  (+2 more)
my_computer/05/: CPU.hdl  Computer.hdl  Makefile  Memory.hdl  Pong.tst
my_computer/06/: Fill-F.asm  Fill.asm  hasm-py2.py  hasm.py  test_jump.asm
my_computer/07/: .clang-format  CMakeLists.txt  README.md  main.cpp
my_computer/08/: CMakeLists.txt  README.md  main.cpp
my_computer/09/: README.adoc  README.md
my_computer/09/merlincpp/: CMakeLists.txt  main.cpp  perfect_moves.h  steps_remaining.py
my_computer/10/: CMakeLists.txt  README
my_computer/10/cmake/: c++-standards.cmake
my_computer/10/src/: CMakeLists.txt  main.cpp
my_computer/10/src/lib/: CMakeLists.txt  cli_args.cpp  cli_args.h
my_computer/10/src/lib/parser/: CMakeLists.txt  jack_ast.h  parse_tree.cpp  parse_tree.h
my_computer/10/src/lib/tokenizer/: CMakeLists.txt  file_io.cpp  file_io.h  jack_lexical_elements.cpp  jack_lexical_elements.h  jack_token_defs.h  jack_tokenizer.cpp  jack_tokenizer.h
my_computer/10/src/unit_tests/: CMakeLists.txt  mock_reader.h  test_parse_tree.cpp  test_tokenizer.cpp
my_computer/11/: CMakeLists.txt  README.adoc
my_computer/11/conformance_tests/ComplexArrays/: Main.jack
my_computer/11/conformance_tests/ConvertToBin/: Main.jack
my_computer/11/conformance_tests/Pong/: PongGame.jack
my_computer/11/src/: CMakeLists.txt  main.cpp
my_computer/11/src/lib/: CMakeLists.txt  cli_args.cpp  cli_args.h
my_computer/11/src/lib/parser/: CMakeLists.txt  jack_ast.cpp  parse_tree.cpp  parse_tree.h
my_computer/11/src/lib/tokenizer/: CMakeLists.txt  file_io.cpp  file_io.h  jack_lexical_elements.cpp  jack_lexical_elements.h  reader.h
my_computer/11/src/lib/vmwriter/: CMakeLists.txt  semantic_exception.h  symbol_table.cpp  symbol_table.h  vmwriter.cpp  vmwriter.h
my_computer/11/src/unit_tests/: CMakeLists.txt  jack_sources.cpp  jack_sources.h  test_ast.cpp  test_parse_tree.cpp  test_parser.cpp  test_vmwriter.cpp
my_computer/11v2/: .clang-tidy  CMakeLists.txt  README.adoc
my_computer/11v2/conformance_tests/ArithmeticOpPrecedence/: Main.jack
my_computer/11v2/conformance_tests/BoolConditions/: Main.jack
my_computer/11v2/conformance_tests/Pong/: Ball.jack  Bat.jack
my_computer/11v2/src/: CMakeLists.txt  main.cpp
my_computer/11v2/src/lib/: CMakeLists.txt  empty.cpp  jfcl.cpp  jfcl.h
my_computer/11v2/src/lib/parser/: CMakeLists.txt  README.adoc  ast.cpp  ast.h  ast_dfs.h  jack_ast_.h  parse_tree.cpp  parse_tree.h  parser.cpp  parser.h  pparser.cpp  pparser.h  pratt_parser.cpp  pratt_parser.h
my_computer/11v2/src/lib/tokenizer/: CMakeLists.txt  jack_token.cpp  jack_token.h  jack_tokenizer.cpp  jack_tokenizer.h
my_computer/11v2/src/lib/util/: CMakeLists.txt  cli_args.cpp  cli_args.h  mock_reader.h  text_reader.cpp  text_reader.h  textfile_reader.cpp  textfile_reader.h
my_computer/11v2/src/lib/vmwriter/: CMakeLists.txt  class_descr.cpp  class_descr.h  program.h  semantic_exception.cpp  semantic_exception.h  subroutine_descr.cpp  subroutine_descr.h  symbol_table.cpp  symbol_table.h  vmwriter.cpp  vmwriter.h
my_computer/11v2/src/turnt_tests/: CMakeLists.txt  Makefile  README
my_computer/11v2/src/turnt_tests/ast/: Average.out  CMakeLists.txt  ComplexArrays.out  ConstSeven.jack  ConstSeven.out  ParenExpression.jack  ParenExpression.out  PongGame.out  turnt.toml
my_computer/11v2/src/turnt_tests/tokenizer/: Average.out  keywords.jack  keywords.out  symbols.jack  symbols.out  turnt.toml
my_computer/11v2/src/turnt_tests/vmwriter/Looper/: Main.jack  Main.out  turnt.toml
my_computer/11v2/src/turnt_tests/vmwriter/SubroutineCalls/: Main.jack  Main.out  NameClashCalls.jack  NameClashCalls.out  SubroutineCalls.jack  SubroutineCalls.out
my_computer/11v2/src/turnt_tests/vmwriter/Warnings/: BoolAsType.jack  BoolAsType.out  BoolExpression.jack  BoolExpression.out  BoolToInt.jack  BoolToInt.out  IntToBool.jack  IntToBool.out  setpath.env  turnt.toml  wrapper.py
my_computer/11v2/src/unit_tests/: CMakeLists.txt  common.cpp  common.h  jack_sources.cpp  jack_sources.h  mock_reader.h  test_parse_tree.cpp  test_parser.cpp  test_pparser.cpp  test_reader.cpp  test_tokenizer.cpp  test_vmwriter.cpp
my_computer/12/: README.adoc  README.md
nand2tetris/tools/: n2tjc  n2ttc  n2tvm
(+35 files in other folders)
